added: ticket #9341 - Updated german translation. thanks to pgoeri added: ticket #9343 - Portuguese pt_PT XBMC and Confluence strings. thanks to hudo added: ticket #9358 - Turkish translation based on English r31001. thanks to queep added: ticket #9360 - korean Translation based on English Rev 30906. thanks to airplanez added: ticket #9361 - Greek translation. thanks to ydatografida added: ticket #9362 - Finnish strings based on English strings revision 30906. thanks to mikko70 added: ticket #9373 - Spanish Translation Updated Last SVN (31001). thanks to MaDDoGo added: ticket #9374 - Updated russian translation for XBMC. thanks to taraban added: ticket #9398 - Updated Hungarian translation based on r31088. thanks to alanwww1 added: ticket #9399 - Confluence skin korean Translation based on English Rev 31068. thanks to airplanez
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31114 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2165,7 +2165,7 @@
   <string id="24054">Changelog</string>
   <string id="24059">Would you like to enable this Add-on?</string>
   <string id="24060">Would you like to disable this Add-on?</string>
-  <string id="24061">Addon-on update available!</string>
+  <string id="24061">Add-on update available!</string>
   <string id="24062">Enabled Add-ons</string>
   <string id="24063">Auto update</string>
   <string id="24064">Add-on enabled</string>
