--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -191,6 +191,7 @@
   <string id="238">Magnification</string>
   <string id="239">Clear playlist on finish</string>
   <string id="240">Display Mode</string>
+  <string id="241">Full Screen #%d</string>
 
   <string id="247">Scripts</string>
   <string id="248">Language</string>
