added: ticket #9426 - Country Switzerland was not selectable inside German and Italian Language. thanks to linuxluemmel
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31170 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/German/langinfo.xml
+++ b/language/German/langinfo.xml
@@ -21,6 +21,22 @@
       <speedunit>kmh</speedunit>
       <timezone>CEST</timezone>
     </region>
+    <region name="Schweiz">
+      <dateshort>DD.MM.YYYY</dateshort>
+      <datelong>DDDD, D. MMMM YYYY</datelong>
+      <time symbolAM="" symbolPM="">HH:mm:ss</time>
+      <tempunit>C</tempunit>
+      <speedunit>kmh</speedunit>
+      <timezone>CEST</timezone>
+    </region>
+    <region name="Österreich">
+      <dateshort>DD.MM.YYYY</dateshort>
+      <datelong>DDDD, D. MMMM YYYY</datelong>
+      <time symbolAM="" symbolPM="">HH:mm:ss</time>
+      <tempunit>C</tempunit>
+      <speedunit>kmh</speedunit>
+      <timezone>CEST</timezone>
+    </region>
   </regions>
 
   <sorttokens>
