fixed: ticket #9430 - Incorrect chars in Spanish language file. thanks to dtorner
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31199 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/Spanish/strings.xml
+++ b/language/Spanish/strings.xml
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <!--Language file translated with Team XBMC Translator-->
-3	<!--Translator: A.Soto-->
-4	<!-- Revisado por MaDDoGo-->
-5	<!--Email: asoto@eresmas.net-->
-6	<!--Date of translation: 06/10/2010-->
-7	<!--$Revision 31001$-->
-8	<!--Based on english strings version 31001-->
+<!--Translator: A.Soto-->
+<!-- Revisado por MaDDoGo-->
+<!--Email: asoto@eresmas.net-->
+<!--Date of translation: 06/10/2010-->
+<!--$Revision 31001$-->
+<!--Based on english strings version 31001-->
 <strings>
   <string id="0">Programas</string>
   <string id="1">Imágenes</string>
