added: ticket #9431 - Patches for all CEST countrys and regions including small countrys that where missing. thanks to linuxluemmel
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31220 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/Catalan/langinfo.xml
+++ b/language/Catalan/langinfo.xml
@@ -10,12 +10,22 @@
     <subtitle>ca</subtitle>
   </dvd>
   <regions>
-    <region>
+    <region name="Cataluña">
       <dateshort>DD/MM/YYYY</dateshort>
       <datelong>DDDD, D / MMMM / YYYY</datelong>
       <time symbolAM="" symbolPM="">HH:mm:ss</time>
       <tempunit>C</tempunit>
       <speedunit>kmh</speedunit>
+      <timezone>CEST</timezone>
+    </region>
+  <regions>
+    <region name="Principat d’Andorra">
+      <dateshort>DD/MM/YYYY</dateshort>
+      <datelong>DDDD, D / MMMM / YYYY</datelong>
+      <time symbolAM="" symbolPM="">HH:mm:ss</time>
+      <tempunit>C</tempunit>
+      <speedunit>kmh</speedunit>
+      <timezone>CEST</timezone>
     </region>
   </regions>
 </language>
