--- a/language/Norwegian/langinfo.xml
+++ b/language/Norwegian/langinfo.xml
@@ -16,6 +16,7 @@
       <time symbolAM="" symbolPM="">HH:mm:ss</time>
       <tempunit>C</tempunit>
       <speedunit>kmh</speedunit>
+      <timezone>CEST</timezone>
     </region>
   </regions>
 </language>
