--- a/language/Slovenian/langinfo.xml
+++ b/language/Slovenian/langinfo.xml
@@ -18,6 +18,7 @@
       <time symbolAM="" symbolPM="">H:mm:ss</time>
       <tempunit>C</tempunit>
       <speedunit>kmh</speedunit>
+      <timezone>CEST</timezone>
     </region>
   </regions>
 </language>
