added: [LINUX] "Root filesystem" entry to filebrowse dialog.
git-svn-id: https://xbmc.svn.sourceforge.net/svnroot/xbmc/trunk@31239 568bbfeb-2a22-0410-94d2-cc84cf5bfa90

--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -1988,6 +1988,7 @@
   <string id="21450">- Edit</string>
   <string id="21451">Internet connection required.</string>
   <string id="21452">Get More</string>
+  <string id="21453">Root filesystem</string>
 
   <string id="21800">File name</string>
   <string id="21801">File path</string>
